# Capr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CaprConfig.cmake  CaprCore.cmake  CaprGC.cmake  CaprIndex.cmake  CaprIniLoader.cmake  CaprPlugin.cmake  CaprRepo.cmake
cmake/capricorn/: Capricorn.cmake  CapricornSolar.cmake
cmake/inbuilt/cson/: Cson.cmake
default/: configuration.ini  index.json  plugin.json  repositories.json
example/test_plugin/: plugin.json
example/test_plugin/cmake/: Plugin.cmake
inbuilt/: cmaps.cmake  cson.cmake
inbuilt/clogs/: CLogs.cmake
inbuilt/cson/: Cson.cmake
inbuilt/houdini/: Houdini.cmake
test/capr/: CMakeLists.txt
test/clogs/: CMakeLists.txt  log.txt
test/cmaps/: CMakeLists.txt
test/cson/: CMakeLists.txt
test/houdini/: CMakeLists.txt
